logs/gocept.amqparchive.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ZConfig'...
Listing './lib/python3.5/site-packages/ZConfig/components'...
Listing './lib/python3.5/site-packages/ZConfig/components/basic'...
Listing './lib/python3.5/site-packages/ZConfig/components/basic/tests'...
Listing './lib/python3.5/site-packages/ZConfig/components/logger'...
Listing './lib/python3.5/site-packages/ZConfig/components/logger/tests'...
Listing './lib/python3.5/site-packages/ZConfig/tests'...
Listing './lib/python3.5/site-packages/ZConfig/tests/input'...
Listing './lib/python3.5/site-packages/ZConfig/tests/library'...
Listing './lib/python3.5/site-packages/ZConfig/tests/library/thing'...
Listing './lib/python3.5/site-packages/ZConfig/tests/library/thing/extras'...
Listing './lib/python3.5/site-packages/ZConfig/tests/library/widget'...
Listing './lib/python3.5/site-packages/ZConfig/tests/zipsource'...
Listing './lib/python3.5/site-packages/ZConfig/tests/zipsource/foo'...
Listing './lib/python3.5/site-packages/ZConfig/tests/zipsource/foo/sample'...
Listing './lib/python3.5/site-packages/ZConfig-3.2.0.dist-info'...
Listing './lib/python3.5/site-packages/gocept'...
Listing './lib/python3.5/site-packages/gocept/amqparchive'...
Listing './lib/python3.5/site-packages/gocept/amqparchive/browser'...
Listing './lib/python3.5/site-packages/gocept/amqparchive/browser/css'...
Listing './lib/python3.5/site-packages/gocept/amqparchive/browser/css/images'...
Listing './lib/python3.5/site-packages/gocept/amqparchive/browser/js'...
Listing './lib/python3.5/site-packages/gocept/amqparchive/browser/js/lib'...
Listing './lib/python3.5/site-packages/gocept/amqparchive/browser/tests'...
Compiling './lib/python3.5/site-packages/gocept/amqparchive/testing.py'...
***   File "./lib/python3.5/site-packages/gocept/amqparchive/testing.py", line 78
    print contents
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/gocept/amqparchive/tests'...
Listing './lib/python3.5/site-packages/gocept/amqparchive/tests/fixtures'...
Listing './lib/python3.5/site-packages/gocept/amqprun'...
Listing './lib/python3.5/site-packages/gocept/amqprun/tests'...
Listing './lib/python3.5/site-packages/gocept.amqparchive-1.2.7.egg-info'...
Listing './lib/python3.5/site-packages/gocept.amqprun-1.7.1.egg-info'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pika'...
Compiling './lib/python3.5/site-packages/pika/asyncore_adapter.py'...
***   File "./lib/python3.5/site-packages/pika/asyncore_adapter.py", line 74
    except socket.error, exn:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pika/blocking_adapter.py'...
***   File "./lib/python3.5/site-packages/pika/blocking_adapter.py", line 89
    except socket.error, exn:
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pika-0.5.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyes'...
Listing './lib/python3.5/site-packages/pyes/contrib'...
Listing './lib/python3.5/site-packages/pyes/orm'...
Listing './lib/python3.5/site-packages/pyes/pyesthrift'...
Compiling './lib/python3.5/site-packages/pyes/queryset.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (queryset.py, line 335)
Listing './lib/python3.5/site-packages/pyes/utils'...
Listing './lib/python3.5/site-packages/pyes-0.99.6.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/transaction'...
Listing './lib/python3.5/site-packages/transaction/tests'...
Listing './lib/python3.5/site-packages/transaction-2.1.2.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/zope'...
Listing './lib/python3.5/site-packages/zope/component'...
Listing './lib/python3.5/site-packages/zope/component/testfiles'...
Listing './lib/python3.5/site-packages/zope/component/tests'...
Listing './lib/python3.5/site-packages/zope/configuration'...
Listing './lib/python3.5/site-packages/zope/configuration/tests'...
Listing './lib/python3.5/site-packages/zope/configuration/tests/excludedemo'...
Listing './lib/python3.5/site-packages/zope/configuration/tests/excludedemo/sub'...
Listing './lib/python3.5/site-packages/zope/configuration/tests/samplepackage'...
Listing './lib/python3.5/site-packages/zope/event'...
Listing './lib/python3.5/site-packages/zope/i18nmessageid'...
Listing './lib/python3.5/site-packages/zope/interface'...
Listing './lib/python3.5/site-packages/zope/interface/common'...
Listing './lib/python3.5/site-packages/zope/interface/common/tests'...
Listing './lib/python3.5/site-packages/zope/interface/tests'...
Listing './lib/python3.5/site-packages/zope/schema'...
Listing './lib/python3.5/site-packages/zope/schema/tests'...
Listing './lib/python3.5/site-packages/zope/xmlpickle'...
Compiling './lib/python3.5/site-packages/zope/xmlpickle/ppml.py'...
***   File "./lib/python3.5/site-packages/zope/xmlpickle/ppml.py", line 177
    return `self._v`
           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/zope/xmlpickle/tests'...
Compiling './lib/python3.5/site-packages/zope/xmlpickle/tests/test_xmlpickle.py'...
***   File "./lib/python3.5/site-packages/zope/xmlpickle/tests/test_xmlpickle.py", line 84
    for v in (-2000000000l, -70000l, -30000l, -3000l, -100l, -99l, -1l,
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/zope.component-4.4.1.dist-info'...
Listing './lib/python3.5/site-packages/zope.configuration-4.1.0.dist-info'...
Listing './lib/python3.5/site-packages/zope.event-4.3.0.dist-info'...
Listing './lib/python3.5/site-packages/zope.i18nmessageid-4.1.0.dist-info'...
Listing './lib/python3.5/site-packages/zope.interface-4.4.3.dist-info'...
Listing './lib/python3.5/site-packages/zope.schema-4.5.0.dist-info'...
Listing './lib/python3.5/site-packages/zope.xmlpickle-3.4.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
